service.yaml
kind: Service
apiVersion: v1
metadata:
  name: infraestructura1-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: infraestructura1
  ports:
    - port: 80 # Default port for image
      nodePort: 31000
---
kind: Service
apiVersion: v1
metadata:
  name: infraestructura2-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: infraestructura2
  ports:
    - port: 3000 # Default port for image
      nodePort: 31001
