ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: infraestructura1-service
            servicePort: 80
        - path: /aplicacion-web1
          backend:
            serviceName: infraestructura1-service
            servicePort: 80
        - path: /aplicacion-web2
          backend:
            serviceName: infraestructura2-service
            servicePort: 3000
